<resources>
    <string name="app_name">Content Provider</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="permission_desc">Descrição Permissão</string>
    <string name="permission_label">Permissão content provide</string>
    <string name="label_title_content_provider">Content provider</string>
    <string name="label_retrive_student">Retrive student</string>
    <string name="label_name">Name</string>
    <string name="label_add_name">Add Name</string>
    <string name="label_grade">Grade</string>

</resources>
